--- a/src/app/ModuloUsuario/pg-canjeoofertas/pg-canjeoofertas.component.html
+++ b/src/app/ModuloUsuario/pg-canjeoofertas/pg-canjeoofertas.component.html
@@ -35,7 +35,7 @@
                 <div class="flex">
                     <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
 
-                    <input pInputText type="text" [value]="'GREENCOINS: ' + cdn.greencoins" readonly class="readonly-input centered-input" />
+                    <input pInputText type="text" [value]="'GreenCoins: ' + cdn.greencoins" readonly class="readonly-input centered-input" />
 
 
 
