--- a/src/app/ModuloNegocio/pg-dashpuntosverdesnegocio/pg-dashpuntosverdesnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-dashpuntosverdesnegocio/pg-dashpuntosverdesnegocio.component.html
@@ -1,1 +1,235 @@
-<p>pg-dashpuntosverdesnegocio works!</p>
+<p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<div class="pagetitle">
+    <h1>Gestion de Puntos Verdes</h1>
+  </div><!-- End Page Title -->
+  
+  <section class="section dashboard">
+    
+    <div class="card">
+
+        <div class="filter" style="margin-right: 3%; margin-top: -8px;">
+            <p-toggleButton [(ngModel)]="checked" onLabel="Gestión" offLabel="Mapa"></p-toggleButton>
+        </div>
+
+        <div class="card-body">
+          <h5 class="card-title"> Puntos verdes <span>/{{ngc.nombre}}</span></h5>
+          
+          <!-- Tabla de los puntos verdes del negocio -->
+          <p-table  *ngIf="checked === false"
+            #dt1
+            [value]="ngc_pvs"
+            dataKey="punto_verde_id"
+            [rows]="10"
+            [showCurrentPageReport]="true"
+            [rowsPerPageOptions]="[10, 25, 50]"
+            [loading]="loading"
+            [paginator]="true"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            [globalFilterFields]="['descripcion', 'direccion', 'punto_verde_id']"
+            [scrollable]="true"
+            scrollHeight="500px"
+            [tableStyle]="{ 'min-width': '50rem' }"
+            [sortMode]="'single'"
+        >
+            <ng-template pTemplate="caption">
+                <div class="flex">
+                    <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
+                    <span class="p-input-icon-left ml-auto">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="applyFilter($event)" placeholder="Search keyword" />
+                    </span>
+                    <div class="p-toolbar-group-end">
+                      <p-button
+                        type="button"
+                        icon="pi pi-plus"
+                        styleClass="p-button-text"
+                        (click)="ModalNuevoInformacion()"
+                      ></p-button>
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="descripcion">
+                        <div class="flex align-items-center">
+                            Punto verde <p-sortIcon field="descripcion"></p-sortIcon>
+                            <p-columnFilter type="text" field="descripcion" display="menu"></p-columnFilter>
+                        </div>
+                    </th>
+                    <th pSortableColumn="gc_necesarios">
+                        <div class="flex align-items-center">
+                            Dirección <p-sortIcon field="gc_necesarios"></p-sortIcon>
+                            <p-columnFilter type="numeric" field="gc_necesarios" display="menu"></p-columnFilter>
+                        </div>
+                    </th>
+                    <th pSortableColumn="fecha_inicio">
+                        <div class="flex align-items-center">
+                            Fecha de creación <p-sortIcon field="fecha_inicio"></p-sortIcon>
+                        </div>
+                    </th>
+                    <th>
+                      <div class="flex align-items-center">
+                          Gestión
+                      </div>
+                  </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-pvs>
+                <tr>
+                    <td>{{ pvs.descripcion }}</td>
+                    <td>{{ "₵ "+pvs.direccion+""}}</td>
+                    <td style="font-size: 15px;">
+                        {{ pvs.fechacreacion | date:'shortDate' }}
+                    </td>
+                    <td>
+                      <p-button
+                        type="button"
+                        icon="pi pi-pencil"
+                        styleClass="p-button-text"
+                        (click)="ModalEditarInformacion(pvs)"
+                      ></p-button>
+                      <p-button
+                        type="button"
+                        icon="pi pi-trash"
+                        styleClass="p-button-text"
+                        (click)="ModalCambiarEstado(pvs)"
+                      ></p-button>
+                    </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage">
+                <tr>
+                    <td colspan="5">No se encontraron puntos verdes.</td>
+                </tr>
+            </ng-template>
+        </p-table>
+          <!-- Fin Tabla de todas las ofertas -->
+
+
+          <app-pg-puntosverdes *ngIf="checked === true"></app-pg-puntosverdes>
+
+          <p-dialog
+            header="Nuevo"
+            [(visible)]="visibleNuevo"
+            [modal]="true"
+            [style]="{ width: '40vw' }"
+            [draggable]="false"
+            [resizable]="false"
+          >
+          <ng-template pTemplate="header">
+            <span class="text-xl ">Nuevo punto verde</span>
+          </ng-template>
+          <ng-template pTemplate="content">
+            
+            <form #newPvsform="ngForm" (ngSubmit)="RegistrarNuevo(newPvsform)" class="row g-3 needs-validation" novalidate style="margin-top: 0px;">
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                <label for="newpvs" class="form-label" style="font-size: 14px;">Punto verde (descripción)</label>
+                <div class="input-group has-validation">
+                  <input type="text" [(ngModel)]="newpvs" name="newpvs" class="form-control" id="newpvs" required style="font-size: 13px;" placeholder="Descripcion de la oferta">
+                  <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una descripción</div>
+                </div>
+              </div>
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                  <label for="direccion" class="form-label" style="font-size: 14px;">Referencia de dirección</label>
+                  <div class="input-group has-validation">
+                    <input type="text" [(ngModel)]="direccion" name="direccion" class="form-control"   id="direccion" required style="font-size: 13px;" min="1" max="1000" >
+                    <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una dirección!</div>
+                  </div>
+              </div>
+              
+              <div class="col-12" style="margin-top: 10px;">
+                <button class="btn btn-primary w-100" type="submit">Registrar</button>
+              </div>
+            </form>
+
+          </ng-template>
+        
+          
+          </p-dialog>
+
+
+          <p-dialog
+            header="Actualización"
+            [(visible)]="visibleEditar"
+            [modal]="true"
+            [style]="{ width: '40vw' }"
+            [draggable]="false"
+            [resizable]="false"
+          >
+          <ng-template pTemplate="header">
+            <span class="text-xl">Actualización de oferta</span>
+          </ng-template>
+          
+          <ng-template pTemplate="content">
+            <form #newOfertaform="ngForm" (ngSubmit)="RegistrarActualizacion(newOfertaform)" class="row g-3 needs-validation" novalidate style="margin-top: 0px;">
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                <label for="newpvs" class="form-label" style="font-size: 14px;">Punto verde</label>
+                <div class="input-group has-validation">
+                  <input type="text" [(ngModel)]="newpvs" name="newpvs" class="form-control" id="newpvs" required style="font-size: 13px;" placeholder="Descripcion de la oferta">
+                  <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una descripción!</div>
+                </div>
+              </div>
+
+              <div class="col-12 form-group" style="margin-top: -10px;">
+                  <label for="direccion" class="form-label" style="font-size: 14px;">Referencia de dirección</label>
+                  <div class="input-group has-validation">
+                    <input type="text" [(ngModel)]="direccion" name="direccion" class="form-control"   id="direccion" required style="font-size: 13px;" min="1" max="1000" >
+                    <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una cantidad reciclada valida (min 1 - max 1000)!</div>
+                  </div>
+              </div>
+              
+              <div class="col-12" style="margin-top: 10px;">
+                <button class="btn btn-primary w-100" type="submit">Actualizar</button>
+              </div>
+            </form>
+          </ng-template>
+      
+          </p-dialog>
+
+
+          <p-dialog
+            header="Eliminación"
+            [(visible)]="visibleEstado"
+            [modal]="true"
+            [style]="{ width: '25vw' }"
+            [draggable]="false"
+            [resizable]="true"
+          >
+          
+          <ng-template pTemplate="content" >
+            <span class=" " style="font-size: 15px;">¿Estas seguro de eliminar este punto verde?</span> <br><br>
+            <div class="col-12 form-group" style="margin-top: -20px;">
+                <div class="input-group has-validation">
+                  <input readonly type="text" [(ngModel)]="newpvs" name="newpvs" class="form-control" id="newpvs" required style="font-size: 13px;" placeholder="Descripcion de la oferta">
+                  <div class="invalid-feedback floating-invalid-feedback">Debes ingresar una descripción!</div>
+                </div>
+              </div>
+          </ng-template>
+          
+          <ng-template pTemplate="footer">
+            <p-button icon="pi pi-save"  label="Eliminar" styleClass="p-button-sm" (click)="DesactivarOferta()"></p-button>
+          </ng-template>
+          
+          </p-dialog>
+
+        </div>
+
+      </div>
+    
+    
+    <div class="row">
+      <!-- Left side columns -->
+      <div class="col-lg-8">
+        <div class="row">
+          <!-- Reports -->
+          <div class="col-12">
+          </div><!-- End Reports -->
+        </div>
+      </div><!-- End Left side columns -->
+    </div>
+  </section>
+
