--- a/src/app/Template/templateAdmin/headeradmin/headeradmin.component.html
+++ b/src/app/Template/templateAdmin/headeradmin/headeradmin.component.html
@@ -76,11 +76,11 @@
 <main id="main" class="main" [class.toggle-sidebar]="sidebarCollapsed">
 
   <div class="pagetitle">
-    <h1>Dashboard</h1>
+    <h1>Panel</h1>
     <nav>
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/dashadmin/principaladmin">Home</a></li>
-        <li class="breadcrumb-item active">Dashboard</li>
+        <li class="breadcrumb-item active">Administración </li>
       </ol>
     </nav>
   </div><!-- End Page Title -->
