--- a/src/app/ModuloAdministracion/pg-material/pg-material.component.html
+++ b/src/app/ModuloAdministracion/pg-material/pg-material.component.html
@@ -71,7 +71,7 @@
     [resizable]="false"
   >
   <ng-template pTemplate="header">
-    <span class="text-xl font-bold">Nuevo</span>
+    <span class="text-xl font-bold">Nuevo Material</span>
   </ng-template>
   <ng-template pTemplate="content">
     <label for="descripcion" class="form-label" style="font-size: 14px;">Nombre: </label>
@@ -82,11 +82,11 @@
         <input pInputText placeholder="Nombre" [(ngModel)]="strnombre" class="p-inputtext-sm" (input)="strnombre = strnombre"/>
       </div>
       <label for="descripcion" class="form-label" style="font-size: 14px;">Valor por libra(Greencoins): </label>
-    <div class="p-inputgroup" style="margin-top: 15px;">
+    <div class="p-inputgroup">
       <span class="p-inputgroup-addon">
           <i class="pi pi-pencil"></i>
       </span>
-      <input type="" placeholder="Valor por libra" [(ngModel)]="intvalor" class="p-inputtext-sm" (input)="intvalor = intvalor"/>
+      <input type="number" placeholder="Valor por libra" [(ngModel)]="intvalor" class="p-inputtext-sm" (input)="intvalor = intvalor"/>
     </div>
   </ng-template>
   
@@ -104,10 +104,11 @@
     [resizable]="false"
   >
   <ng-template pTemplate="header">
-    <span class="text-xl font-bold">Actualización</span>
+    <span class="text-xl font-bold">Actualización Material</span>
   </ng-template>
-  
+
   <ng-template pTemplate="content">
+    <label for="Nombre" class="form-label" style="font-size: 14px;">Nombre:  </label>
     <div class="p-inputgroup">
       <span class="p-inputgroup-addon">
           <i class="pi pi-pencil"></i>
@@ -115,11 +116,12 @@
       <input pInputText placeholder="Nombre" [(ngModel)]="objSeleccion.tipo" class="p-inputtext-sm" />
     </div>
 
-    <div class="p-inputgroup" style="margin-top: 15px;">
+    <label for="Valor" class="form-label" style="font-size: 14px;">Valor por libra (Greencoins):  </label>
+    <div class="p-inputgroup" >
         <span class="p-inputgroup-addon">
             <i class="pi pi-pencil"></i>
         </span>
-        <input type="number" placeholder="Valor" [(ngModel)]="objSeleccion.valor_por_libra" style="font-size: 14px;"/>
+        <input type="number" placeholder="Valor" [(ngModel)]="objSeleccion.valor_por_libra" class="p-inputtext-sm"style="font-size: 14px;"/>
       </div>
   </ng-template>
   
@@ -140,6 +142,7 @@
     <span class="text-xl font-bold">{{strEstado}}</span>
   </ng-template>
   
+  <label for="Descripcion" class="form-label" style="font-size: 14px;">Nombre: </label>
   <ng-template pTemplate="content">
     <div class="p-inputgroup">
       <span class="p-inputgroup-addon">
