--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -294,7 +294,7 @@
                         <i class="bi bi-currency-dollar"></i>
                       </div>
                       <div class="ps-3">
-                        <h6>{{"$"+cdn?.greencoins}}</h6>
+                        <h6>{{"₵ "+cdn?.greencoins}}</h6>
                       </div>
                     </div>
                   </div>
