--- a/src/app/ModuloAdministracion/pg-material/pg-material.component.html
+++ b/src/app/ModuloAdministracion/pg-material/pg-material.component.html
@@ -1,160 +1,215 @@
-<div class="card separador-componentes">
-    <p-toolbar>
-      <div class="p-toolbar-group-center">
-        <p>INFORMACIÓN MATERIALES</p>
+<p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<div class="pagetitle">
+  <h1>Gestion de Materiales</h1>
+</div>
+<section class="section dashboard">
+  <div class="card separador-componentes">
+    <div class="card">
+      <div class="filter">
+        <a class="icon" data-bs-toggle="dropdown" (click)="toggleMenu('menu4', $event)" role="button"><i class="bi bi-three-dots"></i></a>
+        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow" *ngIf="menus['menu4']">
+          <li class="dropdown-header text-start">
+            <h6>Filter</h6>
+          </li>
+
+          <li><a class="dropdown-item" href="#">Today</a></li>
+          <li><a class="dropdown-item" href="#">This Month</a></li>
+          <li><a class="dropdown-item" href="#">This Year</a></li>
+        </ul>
       </div>
-      <div class="p-toolbar-group-end">
-        <p-button
-          type="button"
-          icon="pi pi-plus"
-          styleClass="p-button-text"
-          (click)="ModalNuevoInformacion()"
-        ></p-button>
+
+      <div class="card-body">
+        <h5 class="card-title">Materiales</h5>
+        <p-table
+        #dt1
+        [value]="lsListado"
+        dataKey="ofertas_id"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        [rowsPerPageOptions]="[10, 25, 50]"
+        [loading]="loading"
+        [paginator]="true"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [globalFilterFields]="['descripcion', 'gc_necesarios', 'negocio_id']"
+        [scrollable]="true"
+        scrollHeight="500px"
+        [tableStyle]="{ 'min-width': '20rem' }"
+        [sortMode]="'single'"
+                  >
+        <ng-template pTemplate="caption">
+          <div class="flex">
+              <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
+              <span class="p-input-icon-left ml-auto">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" (input)="applyFilter($event)" placeholder="Search keyword" />
+                </span>
+              <div class="p-toolbar-group-end">
+                <p-button
+                  type="button"
+                  icon="pi pi-plus"
+                  styleClass="p-button-text"
+                  (click)="ModalNuevoInformacion()"
+                ></p-button>
+              </div>
+          </div>
+        </ng-template>
+        <ng-template pTemplate="header">
+          <tr>
+              <th pSortableColumn="descripcion">
+                  <div class="flex align-items-center">
+                      Nombre <p-sortIcon field="descripcion"></p-sortIcon>
+                      <p-columnFilter type="text" field="descripcion" display="menu"></p-columnFilter>
+                  </div>
+              </th>
+              <th pSortableColumn="gc_necesarios">
+                  <div class="flex align-items-center">
+                      Valor por libra (GC) <p-sortIcon field="gc_necesarios"></p-sortIcon>
+                      <p-columnFilter type="numeric" field="gc_necesarios" display="menu"></p-columnFilter>
+                  </div>
+              </th>
+              <th pSortableColumn="fecha_inicio">
+                  <div class="flex align-items-center">
+                      Estado <p-sortIcon field="fecha_inicio"></p-sortIcon>
+                  </div>
+              </th>
+              <th>
+                <div class="flex align-items-center">
+                    Gestión
+                </div>
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-customer>
+          <tr>
+            <td>{{ customer.tipo }}</td>
+            <td>{{"₵ "+ customer.valor_por_libra }}</td>
+            <td>
+            
+              <p-tag *ngIf="customer.estado == false" severity="danger" [value]="'DESACTIVADO'"></p-tag>
+              <p-tag *ngIf="customer.estado == true" severity="success" [value]="'ACTIVO'"></p-tag>
+             
+            <td>
+              <p-button
+                type="button"
+                icon="pi pi-pencil"
+                styleClass="p-button-text"
+                (click)="ModalEditarInformacion(customer)"
+              ></p-button>
+              <p-button
+                type="button"
+                icon="pi pi-trash"
+                styleClass="p-button-text"
+                (click)="ModalCambiarEstado(customer)"
+              ></p-button>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+              <td colspan="5">No se encontraron ofertas.</td>
+          </tr>
+      </ng-template>
+      </p-table>
+
       </div>
-    </p-toolbar>
-  
-    <p-table
-      [value]="lsListado"
-      [paginator]="true"
-      [rows]="10"
-      [showCurrentPageReport]="true"
-      [tableStyle]="{ 'min-width': '10rem' }"
-      styleClass="p-datatable-sm"
-      currentPageReportTemplate="Mostrar {first} - {last} de {totalRecords} elementos"
-      [rowsPerPageOptions]="[10, 25, 50]"
+    </div>
+    <p-dialog
+      header="Nuevo"
+      [(visible)]="visibleNuevo"
+      [modal]="true"
+      [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
+      [draggable]="false"
+      [resizable]="false"
     >
-      <ng-template pTemplate="header">
-        <tr>
-          <th >#</th>
-          <th>NOMBRE</th>
-          <th >VALOR X LIBRA (GC)</th>
-          <th >ESTADO</th>
-          <th >ACCIONES</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-customer>
-        <tr>
-          <td>{{ customer.materiales_id }}</td>
-          <td>{{ customer.tipo }}</td>
-          <td>{{ customer.valor_por_libra }}</td>
-          <td>
-          
-            <p-tag *ngIf="customer.estado == false" severity="danger" [value]="'DESACTIVADO'"></p-tag>
-            <p-tag *ngIf="customer.estado == true" severity="success" [value]="'ACTIVO'"></p-tag>
-           
-          <td>
-            <p-button
-              type="button"
-              icon="pi pi-pencil"
-              styleClass="p-button-text"
-              (click)="ModalEditarInformacion(customer)"
-            ></p-button>
-            <p-button
-              type="button"
-              icon="pi pi-trash"
-              styleClass="p-button-text"
-              (click)="ModalCambiarEstado(customer)"
-            ></p-button>
-          </td>
-        </tr>
-      </ng-template>
-     
-     
-    </p-table>
-  </div>
-  <p-dialog
-    header="Nuevo"
-    [(visible)]="visibleNuevo"
-    [modal]="true"
-    [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
-    [draggable]="false"
-    [resizable]="false"
-  >
-  <ng-template pTemplate="header">
-    <span class="text-xl font-bold">Nuevo Material</span>
-  </ng-template>
-  <ng-template pTemplate="content">
-    <label for="descripcion" class="form-label" style="font-size: 14px;">Nombre: </label>
-    <div class="p-inputgroup">
+    <ng-template pTemplate="header">
+      <span class="text-xl font-bold">Nuevo Material</span>
+    </ng-template>
+    <ng-template pTemplate="content">
+      <label for="descripcion" class="form-label" style="font-size: 14px;">Nombre: </label>
+      <div class="p-inputgroup">
+          <span class="p-inputgroup-addon">
+              <i class="pi pi-pencil"></i>
+          </span>
+          <input pInputText placeholder="Nombre" [(ngModel)]="strnombre" class="p-inputtext-sm" (input)="strnombre = strnombre"/>
+        </div>
+        <label for="descripcion" class="form-label" style="font-size: 14px;">Valor por libra(Greencoins): </label>
+      <div class="p-inputgroup">
         <span class="p-inputgroup-addon">
             <i class="pi pi-pencil"></i>
         </span>
-        <input pInputText placeholder="Nombre" [(ngModel)]="strnombre" class="p-inputtext-sm" (input)="strnombre = strnombre"/>
+        <input type="number" placeholder="Valor por libra" [(ngModel)]="intvalor" class="p-inputtext-sm" (input)="intvalor = intvalor"/>
       </div>
-      <label for="descripcion" class="form-label" style="font-size: 14px;">Valor por libra(Greencoins): </label>
-    <div class="p-inputgroup">
-      <span class="p-inputgroup-addon">
-          <i class="pi pi-pencil"></i>
-      </span>
-      <input type="number" placeholder="Valor por libra" [(ngModel)]="intvalor" class="p-inputtext-sm" (input)="intvalor = intvalor"/>
-    </div>
-  </ng-template>
+    </ng-template>
+    
+    <ng-template pTemplate="footer">
+      <p-button icon="pi pi-save"  label="Registrar" styleClass="p-button-sm" (click)="RegistrarNuevo()"></p-button>
+    </ng-template>
+    
+    </p-dialog>
+    <p-dialog
+      header="Actualización"
+      [(visible)]="visibleEditar"
+      [modal]="true"
+      [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
+      [draggable]="false"
+      [resizable]="false"
+    >
+    <ng-template pTemplate="header">
+      <span class="text-xl font-bold">Actualización Material</span>
+    </ng-template>
   
-  <ng-template pTemplate="footer">
-    <p-button icon="pi pi-save"  label="Registrar" styleClass="p-button-sm" (click)="RegistrarNuevo()"></p-button>
-  </ng-template>
-  
-  </p-dialog>
-  <p-dialog
-    header="Actualización"
-    [(visible)]="visibleEditar"
-    [modal]="true"
-    [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
-    [draggable]="false"
-    [resizable]="false"
-  >
-  <ng-template pTemplate="header">
-    <span class="text-xl font-bold">Actualización Material</span>
-  </ng-template>
-
-  <ng-template pTemplate="content">
-    <label for="Nombre" class="form-label" style="font-size: 14px;">Nombre:  </label>
-    <div class="p-inputgroup">
-      <span class="p-inputgroup-addon">
-          <i class="pi pi-pencil"></i>
-      </span>
-      <input pInputText placeholder="Nombre" [(ngModel)]="objSeleccion.tipo" class="p-inputtext-sm" />
-    </div>
-
-    <label for="Valor" class="form-label" style="font-size: 14px;">Valor por libra (Greencoins):  </label>
-    <div class="p-inputgroup" >
+    <ng-template pTemplate="content">
+      <label for="Nombre" class="form-label" style="font-size: 14px;">Nombre:  </label>
+      <div class="p-inputgroup">
         <span class="p-inputgroup-addon">
             <i class="pi pi-pencil"></i>
         </span>
-        <input type="number" placeholder="Valor" [(ngModel)]="objSeleccion.valor_por_libra" class="p-inputtext-sm"style="font-size: 14px;"/>
+        <input pInputText placeholder="Nombre" [(ngModel)]="objSeleccion.tipo" class="p-inputtext-sm" />
       </div>
-  </ng-template>
   
-  <ng-template pTemplate="footer">
-    <p-button icon="pi pi-save"  label="Actualizar" styleClass="p-button-sm" (click)="RegistrarActualizacion()"></p-button>
-  </ng-template>
-  
-  </p-dialog>
-  <p-dialog
-    header="Estado"
-    [(visible)]="visibleEstado"
-    [modal]="true"
-    [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
-    [draggable]="false"
-    [resizable]="false"
-  >
-  <ng-template pTemplate="header">
-    <span class="text-xl font-bold">{{strEstado}}</span>
-  </ng-template>
-  
-  <label for="Descripcion" class="form-label" style="font-size: 14px;">Nombre: </label>
-  <ng-template pTemplate="content">
-    <div class="p-inputgroup">
-      <span class="p-inputgroup-addon">
-          <i class="pi pi-pencil"></i>
-      </span>
-      <input pInputText placeholder="Estado" [(ngModel)]="objSeleccion.tipo" class="p-inputtext-sm" readonly/>
+      <label for="Valor" class="form-label" style="font-size: 14px;">Valor por libra (Greencoins):  </label>
+      <div class="p-inputgroup" >
+          <span class="p-inputgroup-addon">
+              <i class="pi pi-pencil"></i>
+          </span>
+          <input type="number" placeholder="Valor" [(ngModel)]="objSeleccion.valor_por_libra" class="p-inputtext-sm"style="font-size: 14px;"/>
+        </div>
+    </ng-template>
+    
+    <ng-template pTemplate="footer">
+      <p-button icon="pi pi-save"  label="Actualizar" styleClass="p-button-sm" (click)="RegistrarActualizacion()"></p-button>
+    </ng-template>
+    
+    </p-dialog>
+    <p-dialog
+      header="Estado"
+      [(visible)]="visibleEstado"
+      [modal]="true"
+      [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
+      [draggable]="false"
+      [resizable]="false"
+    >
+    <ng-template pTemplate="header">
+      <span class="text-xl font-bold">{{strEstado}}</span>
+    </ng-template>
+    
+    <label for="Descripcion" class="form-label" style="font-size: 14px;">Nombre: </label>
+    <ng-template pTemplate="content">
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon">
+            <i class="pi pi-pencil"></i>
+        </span>
+        <input pInputText placeholder="Estado" [(ngModel)]="objSeleccion.tipo" class="p-inputtext-sm" readonly/>
+      </div>
+    </ng-template>
+    
+    <ng-template pTemplate="footer">
+      <p-button icon="pi pi-save"  label="Guardar" styleClass="p-button-sm" (click)="EstadoCambiarActualizacion()"></p-button>
+    </ng-template>
+    
+    </p-dialog>
+    <p-toast></p-toast>
     </div>
-  </ng-template>
-  
-  <ng-template pTemplate="footer">
-    <p-button icon="pi pi-save"  label="Guardar" styleClass="p-button-sm" (click)="EstadoCambiarActualizacion()"></p-button>
-  </ng-template>
-  
-  </p-dialog>
-  <p-toast></p-toast>
+    
+</section>
